# Stepthrough

./: .gitignore  Hybrid_v2_Engine_Work_Plan.md  LICENSE  Makefile  README.md  manual.md  setup.sh  start.sh  test_bug.py  test_loop.py  vivid-wiggling-storm.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  analysis_metadata.py  config.py  database.py  main.py  models.py  repository.py  storage.py  utils.py
backend/app/services/: __init__.py  detection.py  export.py  hybrid_detection.py  jobs.py  similarity.py  video.py
backend/tests/: conftest.py  test_analysis_metadata.py  test_database_migration.py  test_detection_settings.py  test_export.py  test_formatters.py  test_hybrid_detection.py  test_paddleocr_smoke.py  test_project_summary.py  test_run_workflow.py  test_video_tools.py
backend/tests/eval/: README.md  evaluator.py  rendering.py  runner.py  scenarios.py  test_eval_realistic_smoke.py  test_eval_suite.py  test_eval_variants_unit.py  types.py  visualize.py
docs/: hybrid-v2-engine-developer-draft.md  hybrid-v2-engine-graduate-draft.md
docs/wiki/: Choosing-Settings.md  First-Tutorial.md  Home.md  Researcher-Onboarding.md  _Sidebar.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: AnalysisControls.tsx  AppSettings.tsx  AppWatermark.tsx  CandidateCard.tsx  EditableName.tsx  PerformanceMonitor.tsx  StageNavigator.tsx  ViewportWarning.tsx
frontend/src/lib/: analysis.ts  formatters.ts  (+6 more)
scripts/: sync_hybrid_v2_manual.py
(+6 files in other folders)
